Fix overflow scroll

--- a/app/src/components/App/styles.css
+++ b/app/src/components/App/styles.css
@@ -6,6 +6,6 @@
 	h1 {
 		text-align: center;
 		margin-top: 0;
-		margin-bottom: var(--spacingXXL);
+		margin-bottom: var(--spacingXL);
 	}
 }
