--- a/app/src/components/Todo/Lists/styles.css
+++ b/app/src/components/Todo/Lists/styles.css
@@ -1,4 +1,6 @@
 .listPanel {
+	display: flex;
+	flex-direction: column;
 	max-width: 400px;
 	flex-shrink: 0;
 	padding-right: var(--spacingL);
@@ -6,5 +8,6 @@
 
 	ul {
 		margin-top: var(--spacingM);
+		overflow-y: auto;
 	}
 }
